--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,96 @@
-body {
-    background: #000;
+@import url('https://fonts.googleapis.com/css2?family=Raleway&family=Righteous&display=swap');
+
+html { 
+    background: url('../images/background.jpg') no-repeat center center fixed; 
+    background-size: cover;
+  }
+
+.page-header {
+    font-family: Righteous;
+    color: #fff;
+    text-align: center;
+    font-size: large;
+    padding-top: 100px;
 }
+
+h2 {
+    font-family: Righteous;
+    color: #fff;
+    text-align: center;
+    font-size: x-large;
+    padding-top: 50px;
+    margin: auto;
+    width: 60%;
+}
+
+.game-container {
+
+}
+
+.info-container {
+    display: inline-block;
+
+}
+
+.game-info {
+    display: inline-block;
+}
+
+#timer {
+    font-family: Righteous;
+    color: #fff;
+    text-align: center;
+    font-size: large;
+}
+
+#flips{
+    font-family: Righteous;
+    color: #fff;
+    text-align: center;
+    font-size: large;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media only screen and (min-width: 600px) {
+    /* For tablets: */
+    .col-s-1 {width: 8.33%;}
+    .col-s-2 {width: 16.66%;}
+    .col-s-3 {width: 25%;}
+    .col-s-4 {width: 33.33%;}
+    .col-s-5 {width: 41.66%;}
+    .col-s-6 {width: 50%;}
+    .col-s-7 {width: 58.33%;}
+    .col-s-8 {width: 66.66%;}
+    .col-s-9 {width: 75%;}
+    .col-s-10 {width: 83.33%;}
+    .col-s-11 {width: 91.66%;}
+    .col-s-12 {width: 100%;}
+  }
+  @media only screen and (min-width: 768px) {
+    /* For desktop: */
+    .col-1 {width: 8.33%;}
+    .col-2 {width: 16.66%;}
+    .col-3 {width: 25%;}
+    .col-4 {width: 33.33%;}
+    .col-5 {width: 41.66%;}
+    .col-6 {width: 50%;}
+    .col-7 {width: 58.33%;}
+    .col-8 {width: 66.66%;}
+    .col-9 {width: 75%;}
+    .col-10 {width: 83.33%;}
+    .col-11 {width: 91.66%;}
+    .col-12 {width: 100%;}
+  }
