--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,32 +22,38 @@ h2 {
     margin: auto;
     width: 60%;
 }
-
 .game-container {
-
-}
-
-.info-container {
-    display: inline-block;
-
+    background: blueviolet;
+    margin:auto;
+    top: 30px;
 }
 
 .game-info {
-    display: inline-block;
+    background:cadetblue;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #timer {
+    background-color: black;
     font-family: Righteous;
     color: #fff;
     text-align: center;
     font-size: large;
+    margin: 20px;
+    padding: 20px;
+    float: left;
 }
 
 #flips{
+    background-color: black;
     font-family: Righteous;
     color: #fff;
     text-align: center;
     font-size: large;
+    margin: 20px;
+    padding: 20px;
+    float: right;
 }
 
 
@@ -78,7 +84,13 @@ h2 {
     .col-s-10 {width: 83.33%;}
     .col-s-11 {width: 91.66%;}
     .col-s-12 {width: 100%;}
+
+
   }
+
+
+
+
   @media only screen and (min-width: 768px) {
     /* For desktop: */
     .col-1 {width: 8.33%;}
