Add style to buttons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway&family=Righteous&display=swap');
 
+* {
+    box-sizing: border-box;
+  }
+  
+  .row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+
 html { 
     background: url('../images/background.jpg') no-repeat center center fixed; 
     background-size: cover;
@@ -24,8 +34,8 @@ h2 {
 }
 .game-container {
     background: blueviolet;
-    margin:auto;
-    top: 30px;
+    margin: auto;
+    width: 50%;
 }
 
 .game-info {
@@ -35,7 +45,8 @@ h2 {
 }
 
 #timer {
-    background-color: black;
+    background-color:#FCA311;
+    border-radius: 20px;
     font-family: Righteous;
     color: #fff;
     text-align: center;
@@ -46,7 +57,8 @@ h2 {
 }
 
 #flips{
-    background-color: black;
+    background-color:#FCA311;
+    border-radius: 20px;
     font-family: Righteous;
     color: #fff;
     text-align: center;
@@ -69,8 +81,12 @@ h2 {
 
 
 
-
-@media only screen and (min-width: 600px) {
+ /* For mobile phones: */
+ [class*="col-"] {
+    width: 100%;
+}
+  
+  @media only screen and (min-width: 600px) {
     /* For tablets: */
     .col-s-1 {width: 8.33%;}
     .col-s-2 {width: 16.66%;}
@@ -84,13 +100,7 @@ h2 {
     .col-s-10 {width: 83.33%;}
     .col-s-11 {width: 91.66%;}
     .col-s-12 {width: 100%;}
-
-
   }
-
-
-
-
   @media only screen and (min-width: 768px) {
     /* For desktop: */
     .col-1 {width: 8.33%;}
