Add style to footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,42 +83,39 @@ h2 {
     box-shadow: 0 10px 18px 0 rgba(225,225,225,0.2), 0 6px 20px 0 rgba(225,225,225,0.19);
 }
 
-.footer {
+
+footer {
+    position: inherit;
     width: 100%;
-    height: fit-content;
     right: 0;
     bottom: 0;
     left: 0;
     clear: both;
-    background-color: #14213D;
-    color: #ffffff;
-    text-align: center;
-    font-family: Righteous;
     margin-top: 40px;
 }
 
-.footer p {
+footer p {
+    font-family: Righteous;
     text-align: center;
     color: #fff;
-    padding-top: 20px;
+    margin-top: 15px;
 }
-
 
 .social-media {
     text-align: center;
-    margin: auto;
+    padding:inherit;
 }
-
-.social-media > li {
+.social-media li {
     display: inline-block;
-    padding-bottom: 30px;
-    margin-bottom: 30px;
-    text-decoration: none;
+    color: #fff;
 }
 
 .social-media i {
-    font-size: large;
-    color: #ffffff;
+    text-align: center;
+    color: #fff;
+    padding: 20px;
+    width: 106px;
+
 }
 
 
