--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway&family=Righteous&display=swap');
 
-* {
+*{
     box-sizing: border-box;
   }
   
@@ -15,12 +15,23 @@ html {
     background-size: cover;
   }
 
+.grid {
+    display: flex;
+    flex-wrap: wrap;
+    height: 400px;
+    width: 400px;
+
+}
+
+
+/*
 .page-header {
     font-family: Righteous;
     color: #fff;
     text-align: center;
     font-size: large;
     padding-top: 100px;
+    margin: auto;
 }
 
 h2 {
@@ -45,26 +56,16 @@ h2 {
 #timer {
     background-color:#FCA311;
     border-radius: 20px;
-    font-family: Righteous;
+    font-family: Righteous; 
     color: #fff;
     text-align: center;
     font-size: large;
     margin: 20px;
     padding: 20px;
     float: left;
+    box-shadow: 0 10px 18px 0 rgba(225,225,225,0.2), 0 6px 20px 0 rgba(225,225,225,0.19);
 }
 
-#start-button {
-    background-color:#FCA311;
-    border-radius: 20px;
-    font-family: Righteous;
-    color: #fff;
-    text-align: center;
-    font-size: large;
-    margin: 20px;
-    padding: 20px;
-    float: left;
-}
 
 #flips{
     background-color:#FCA311;
@@ -76,6 +77,7 @@ h2 {
     margin: 20px;
     padding: 20px;
     float: right;
+    box-shadow: 0 10px 18px 0 rgba(225,225,225,0.2), 0 6px 20px 0 rgba(225,225,225,0.19);
 }
 
 .game-wrap {
@@ -94,7 +96,7 @@ h2 {
     display: inline-block;
     box-shadow: 0 10px 18px 0 rgba(225,225,225,0.2), 0 6px 20px 0 rgba(225,225,225,0.19);
 }
-
+*/
 
 footer {
     position: inherit;
@@ -141,13 +143,10 @@ footer p {
 
 
 
- /* For mobile phones: */
- [class*="col-"] {
-    width: 100%;
-}
-  
-  @media only screen and (min-width: 600px) {
-    /* For tablets: */
+ 
+
+@media only screen and (min-width: 300px) {
+    /* For mobile: */
     .col-s-1 {width: 8.33%;}
     .col-s-2 {width: 16.66%;}
     .col-s-3 {width: 25%;}
@@ -160,6 +159,22 @@ footer p {
     .col-s-10 {width: 83.33%;}
     .col-s-11 {width: 91.66%;}
     .col-s-12 {width: 100%;}
+  }
+  
+  @media only screen and (min-width: 600px) {
+    /* For tablets: */
+    .col-m-1 {width: 8.33%;}
+    .col-m-2 {width: 16.66%;}
+    .col-m-3 {width: 25%;}
+    .col-m-4 {width: 33.33%;}
+    .col-m-5 {width: 41.66%;}
+    .col-m-6 {width: 50%;}
+    .col-m-7 {width: 58.33%;}
+    .col-m-8 {width: 66.66%;}
+    .col-m-9 {width: 75%;}
+    .col-m-10 {width: 83.33%;}
+    .col-m-11 {width: 91.66%;}
+    .col-m-12 {width: 100%;}
   }
   @media only screen and (min-width: 768px) {
     /* For desktop: */
