--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,10 +18,11 @@ html {
   .grid {
     display: flex;
     flex-wrap: wrap;
-    height: 320px;
+    height: 400px;
     width: 400px;
     grid-gap: 25px;
     margin: auto;
+    margin-top: 150px;
 }
 
 .page-header {
@@ -43,8 +44,14 @@ h2 {
     width: 60%;
 }
 
+.game-container {
+  margin: auto;
+
+}
+
 
 .game-info {
+  display: inline-block;
     background-color:#FCA311;
     border-radius: 20px;
     font-family: Righteous; 
@@ -52,7 +59,7 @@ h2 {
     text-align: center;
     font-size: large;
     margin: 20px;
-    padding: 20px;
+    padding: 5px;
     float: left;
     box-shadow: 0 10px 18px 0 rgba(225,225,225,0.2), 0 6px 20px 0 rgba(225,225,225,0.19);
 }
