--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,6 +45,7 @@ h2 {
   grid-gap: 10px;
   margin: 50px;
   justify-content: center;
+  perspective: 500px;
 }
 
 .game-info-container {
@@ -81,22 +82,26 @@ h2 {
   border-radius: 12px;
   border-width: 1px;
   border-style: solid;
+  transition: transform 500ms ease-in-out
 }
 
 .card.visible .card-back {
-  transform: rotate(-180deg);
+  transform: rotateY(-180deg);
 }
 
 .card.visible .card-front {
-  transform: rotateY(180deg);
+  transform: rotateY(0);
 }
 
 .card-back {
+  background-color: black;
   border-color: #273617;
 }
 
 .card-front {
-  transform: rotateX(180deg);
+  background-color: #fff;
+  border-color: black;
+  transform: rotateY(180deg);
 }
 
 .card-value {
@@ -113,9 +118,14 @@ h2 {
   width: 30px;
   height: 30px;
   color: #fff;
-  /*align-self: flex-start;
+  align-self: flex-start;
   transform: translateY(-10);
-  transition: transform 100ms ease-in-out;*/
+  transition: transform 100ms ease-in-out, height 100ms ease-in-out;
+}
+
+.card-face:hover .claws {
+  width: 30px;
+  height: 30px;
 }
 
 .claws-top-left {
@@ -141,7 +151,13 @@ h2 {
   right: 0;
 }
 
-.card-back:hover .claws {
+.eyes {
+  align-self: flex-start;
+  transform: translateY(-10px);
+  transition: transform 100ms ease-in-out;
+}
+
+.card-back:hover .eyes {
   transform: translateY(0);
 }
 
