--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,17 +55,17 @@ h2 {
 }
 
 .game-info {
-    background-color:#FCA311;
-    border-radius: 20px;
-    font-family: Righteous, serif; 
-    color: #fff;
-    font-size: large;
-    box-shadow: 0 10px 18px 0 rgba(225,225,225,0.2), 0 6px 20px 0 rgba(225,225,225,0.19);
+  padding: 10px;
+  background-color:#FCA311;
+  border-radius: 20px;
+  font-family: Righteous, serif; 
+  color: #fff;
+  font-size: large;
+  box-shadow: 0 10px 18px 0 rgba(225,225,225,0.2), 0 6px 20px 0 rgba(225,225,225,0.19);
 }
 
 .card {
   position: relative;
-  background-color: blue;
   height: 100px;
   width: 80px;
 }
@@ -85,11 +85,11 @@ h2 {
   transition: transform 500ms ease-in-out
 }
 
-.card.visible .card-back {
+.card:hover .card-back {
   transform: rotateY(-180deg);
 }
 
-.card.visible .card-front {
+.card:hover .card-front {
   transform: rotateY(0);
 }
 
@@ -99,7 +99,7 @@ h2 {
 }
 
 .card-front {
-  background-color: #fff;
+  background-color: black;
   border-color: black;
   transform: rotateY(180deg);
 }
@@ -111,44 +111,6 @@ h2 {
 
 .card-front:hover .card-value {
   transform: scale(1);
-}
-
-.claws {
-  position: absolute;
-  width: 30px;
-  height: 30px;
-  color: #fff;
-  align-self: flex-start;
-  transform: translateY(-10);
-  transition: transform 100ms ease-in-out, height 100ms ease-in-out;
-}
-
-.card-face:hover .claws {
-  width: 30px;
-  height: 30px;
-}
-
-.claws-top-left {
-  transform: rotate(270deg);
-  top: 0;
-  left: 0;
-}
-
-.claws-top-right {
-  top: 0;
-  right: 0;
-}
-
-.claws-bottom-left {
-  transform: rotate(180deg);
-  bottom: 0;
-  left: 0;
-}
-
-.claws-bottom-right {
-  transform: rotate(90deg);
-  bottom: 0;
-  right: 0;
 }
 
 .eyes {
