Add feedback form

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,7 +43,7 @@ h2 {
   color: #fff;
   text-align: center;
   font-size: large;
-  padding-top: 50px;
+  padding-top: 30px;
   margin: auto;
   width: 60%;
 }
@@ -53,7 +53,7 @@ h3 {
   color: #fff;
   text-align: center;
   font-size: large;
-  padding-top: 50px;
+  padding-top: 30px;
   margin: auto;
   width: 60%;
 }
@@ -193,41 +193,86 @@ h3 {
   font-size: .3em;
 }
 
+#contact-section p {
+  font-family: Raleway, serif;
+  color: #fff;
+  text-align: center;
+  font-size: large;
+  padding-top: 30px;
+  margin: auto;
+  width: 60%;
+}
+
+  #contact {
+  border: 2px solid #000;
+  background-color: #273617;
+  border-radius: 3px;
+  padding: 30px;
+}
+
+  input {
+  width: 90%;
+  height: 40px;
+  border: 1px solid #273617;
+  border-radius: 3px;
+  margin: 10px;
+  display: inline-block;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+  #subject {
+  width: 90%;
+  height: 60px;
+  margin-top: 10px;
+  border: 1px solid #273617;
+  border-radius: 3px;
+  margin-left: 10px;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+
+  #submit {
+  background-color: #273617;
+  color: #fff;
+  font-weight: 700;
+}
+
+  #submit:hover {
+  background-color: #fff;
+  color: #273617;
+  font-weight: 700;
+}
+
 footer {
-    position: inherit;
-    width: 100%;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    clear: both;
-    margin-top: 40px;
+  position: inherit;
+  width: 100%;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  clear: both;
+  margin-top: 40px;
 }
 
 footer p {
-    font-family: Righteous, serif;
-    text-align: center;
-    color: #fff;
-    margin-top: 15px;
+  font-family: Righteous, serif;
+  text-align: center;
+  color: #fff;
+  margin-top: 15px;
 }
 
 .social-media {
-    text-align: center;
-    padding:inherit;
+  text-align: center;
+  padding:inherit;
 }
 .social-media li {
-    display: inline-block;
-    color: #fff;
+  display: inline-block;
+  color: #fff;
 }
 
 .social-media i {
-    text-align: center;
-    color: #fff;
-    padding: 20px;
-    width: 106px;
-
+  text-align: center;
+  color: #fff;
+  padding: 20px;
+  width: 106px;
 }
-
-
 
   
   @media only screen and (max-width: 390px) {
@@ -246,5 +291,42 @@ footer p {
     margin: 20px;
     }
   }
+
+  /* For mobile phones: */
+  [class*="col-"] {
+    width: 100%;
+}
+  
+  @media only screen and (min-width: 600px) {
+    /* For tablets: */
+    .col-s-1 {width: 8.33%;}
+    .col-s-2 {width: 16.66%;}
+    .col-s-3 {width: 25%;}
+    .col-s-4 {width: 33.33%;}
+    .col-s-5 {width: 41.66%;}
+    .col-s-6 {width: 50%;}
+    .col-s-7 {width: 58.33%;}
+    .col-s-8 {width: 66.66%;}
+    .col-s-9 {width: 75%;}
+    .col-s-10 {width: 83.33%;}
+    .col-s-11 {width: 91.66%;}
+    .col-s-12 {width: 100%;}
+  }
+  @media only screen and (min-width: 768px) {
+    /* For desktop: */
+    .col-1 {width: 8.33%;}
+    .col-2 {width: 16.66%;}
+    .col-3 {width: 25%;}
+    .col-4 {width: 33.33%;}
+    .col-5 {width: 41.66%;}
+    .col-6 {width: 50%;}
+    .col-7 {width: 58.33%;}
+    .col-8 {width: 66.66%;}
+    .col-9 {width: 75%;}
+    .col-10 {width: 83.33%;}
+    .col-11 {width: 91.66%;}
+    .col-12 {width: 100%;}
+  }
+
   
  
