Style feedback section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -197,20 +197,35 @@ h3 {
   font-family: Raleway, serif;
   color: #fff;
   text-align: center;
-  font-size: large;
+  font-size: x-large;
   padding-top: 30px;
+  padding-bottom: 30px;
   margin: auto;
   width: 60%;
 }
 
-  #contact {
+#contact-section {
+  width: 50%;
+  margin: 0px auto;
+  justify-content: center;
+}
+
+#contact {
   border: 2px solid #000;
   background-color: #273617;
   border-radius: 3px;
   padding: 30px;
 }
 
-  input {
+#contact label {
+  font-family: Raleway, serif;
+  color: #fff;
+  text-align: center;
+  font-size: large;
+  margin-left: 10px;
+}
+
+input {
   width: 90%;
   height: 40px;
   border: 1px solid #273617;
@@ -219,7 +234,7 @@ h3 {
   display: inline-block;
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
-  #subject {
+#subject {
   width: 90%;
   height: 60px;
   margin-top: 10px;
@@ -229,13 +244,13 @@ h3 {
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 
-  #submit {
+#submit {
   background-color: #273617;
   color: #fff;
   font-weight: 700;
 }
 
-  #submit:hover {
+#submit:hover {
   background-color: #fff;
   color: #273617;
   font-weight: 700;
@@ -290,43 +305,11 @@ footer p {
       padding: 15px;
     margin: 20px;
     }
-  }
 
-  /* For mobile phones: */
-  [class*="col-"] {
-    width: 100%;
-}
-  
-  @media only screen and (min-width: 600px) {
-    /* For tablets: */
-    .col-s-1 {width: 8.33%;}
-    .col-s-2 {width: 16.66%;}
-    .col-s-3 {width: 25%;}
-    .col-s-4 {width: 33.33%;}
-    .col-s-5 {width: 41.66%;}
-    .col-s-6 {width: 50%;}
-    .col-s-7 {width: 58.33%;}
-    .col-s-8 {width: 66.66%;}
-    .col-s-9 {width: 75%;}
-    .col-s-10 {width: 83.33%;}
-    .col-s-11 {width: 91.66%;}
-    .col-s-12 {width: 100%;}
+    #contact-section {
+      width: 75%;
+      margin: 0px auto;
+      justify-content: center;
+    }
   }
-  @media only screen and (min-width: 768px) {
-    /* For desktop: */
-    .col-1 {width: 8.33%;}
-    .col-2 {width: 16.66%;}
-    .col-3 {width: 25%;}
-    .col-4 {width: 33.33%;}
-    .col-5 {width: 41.66%;}
-    .col-6 {width: 50%;}
-    .col-7 {width: 58.33%;}
-    .col-8 {width: 66.66%;}
-    .col-9 {width: 75%;}
-    .col-10 {width: 83.33%;}
-    .col-11 {width: 91.66%;}
-    .col-12 {width: 100%;}
-  }
-
   
- 
